# diploma-thesis

./: README.md  docker-compose.yml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
backend/init/: init.fsx  init.sql  seed.sql
backend/src/: error.rs  main.rs  utils.rs
backend/src/controllers/: auth.rs  users.rs
backend/src/models/: auth.rs
backend/src/modules/: mod.rs
backend/src/modules/auth/: controller.rs  mod.rs  models.rs  storage.rs
backend/src/modules/blob/: mod.rs
backend/src/modules/course/: controller.rs  mod.rs  models.rs  storage.rs
backend/src/modules/lesson/: controller.rs  mod.rs  models.rs  storage.rs
backend/src/modules/university/: controller.rs  mod.rs  models.rs  storage.rs
backend/src/modules/user/: controller.rs  mod.rs  models.rs  storage.rs
backend/src/sql/: init.sql
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  store.jsx
frontend/src/Header/: Header 2.css  Header 2.jsx  Header.jsx
frontend/src/MainSection/: MainSection 2.css  MainSection.css  MainSection.jsx
frontend/src/MainSection/Pages/Calendar/: Calendar 2.jsx  Calendar.jsx
frontend/src/MainSection/Pages/Login/: Login.jsx
frontend/src/store/: store.jsx
frontend/src/store/slices/: DefaultSlice.jsx  NavigationSlice.jsx
init/: init.sql  seed.sql
lambdas/BlobFunctions/: BlobFunctions.csproj  DeleteFromBlob.cs  UploadToBlob.cs
lambdas/BlobFunctions/Properties/: launchSettings 2.json
thesis/: .gitignore  thesis.tex  titlepage.tex
(+3 files in other folders)
