[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["headers"] }
tokio = { version = "1.21.2", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "json" ] }
tracing = "0.1" # TODO: read & learn
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
dotenv = "0.15.0"
